修改：      archives.html 	修改：      author/eleveni3864.html 	修改：      author/eleveni3865.html 	修改：      author/eleveni3866.html 	修改：      category/linuxyun-wei.html 	修改：      category/linuxyun-wei2.html 	修改：      feeds/all-zh_cn.atom.xml 	修改：      feeds/all.atom.xml 	修改：      feeds/linuxyun-wei.atom.xml 	修改：      feeds/rss.xml 	修改：      index.html 	修改：      index2.html 	修改：      index3.html 	修改：      index4.html 	修改：      index5.html 	修改：      index6.html 	新文件：    posts/2013/10/13/squid-url-tiao-zhuan/index.html 	修改：      sitemap.xml 	新文件：    tag/squid.html 	修改：      tag/yun-wei.html 	修改：      tag/yun-wei2.html 	修改：      tag/yun-wei3.html 	修改：      tags.html

--- a/archives.html
+++ b/archives.html
@@ -57,6 +57,10 @@
 <table class="table">
     <tbody>
             <tr>
+        <td>13 Oct 2013</td>
+        <td><a href='http://eleveni386.7axu.com/posts/2013/10/13/squid-url-tiao-zhuan/'>Squid Url 跳转</a></td>
+        </tr>
+            <tr>
         <td>22 Sep 2013</td>
         <td><a href='http://eleveni386.7axu.com/posts/2013/09/22/ji-yi-wang-rtxmi-ma/'>记.遗忘RTX密码</a></td>
         </tr>
