--- a/tags.html
+++ b/tags.html
@@ -78,6 +78,7 @@
     <li><a href="http://eleveni386.7axu.com/tag/svn.html">Svn</a></li>
     <li><a href="http://eleveni386.7axu.com/tag/jian-kong-gong-ju.html">监控工具</a></li>
     <li><a href="http://eleveni386.7axu.com/tag/you-xiang.html">邮箱</a></li>
+    <li><a href="http://eleveni386.7axu.com/tag/squid.html">squid</a></li>
     <li><a href="http://eleveni386.7axu.com/tag/bo-fang-qi.html">播放器</a></li>
     <li><a href="http://eleveni386.7axu.com/tag/shell.html">shell</a></li>
     <li><a href="http://eleveni386.7axu.com/tag/http.html">http</a></li>
