--- a/archives.html
+++ b/archives.html
@@ -57,6 +57,10 @@
 <table class="table">
     <tbody>
             <tr>
+        <td>01 Jan 2014</td>
+        <td><a href='http://eleveni386.7axu.com/posts/2014/01/01/wiz-for-linux-210ban-ben-gong-neng-jie-shao/'>Wiz for linux 2.1.0版本功能介绍</a></td>
+        </tr>
+            <tr>
         <td>10 Dec 2013</td>
         <td><a href='http://eleveni386.7axu.com/posts/2013/12/10/markdownbian-ji-qi/'>markdown编辑器</a></td>
         </tr>
