--- a/tags.html
+++ b/tags.html
@@ -75,15 +75,18 @@
     <li><a href="http://eleveni386.7axu.com/tag/fan-qiang.html">翻墙</a></li>
     <li><a href="http://eleveni386.7axu.com/tag/gtk.html">gtk</a></li>
     <li><a href="http://eleveni386.7axu.com/tag/keepalived.html">keepalived</a></li>
+    <li><a href="http://eleveni386.7axu.com/tag/wiz.html">wiz</a></li>
     <li><a href="http://eleveni386.7axu.com/tag/an-quan.html">安全</a></li>
     <li><a href="http://eleveni386.7axu.com/tag/svn.html">Svn</a></li>
     <li><a href="http://eleveni386.7axu.com/tag/jian-kong-gong-ju.html">监控工具</a></li>
     <li><a href="http://eleveni386.7axu.com/tag/you-xiang.html">邮箱</a></li>
+    <li><a href="http://eleveni386.7axu.com/tag/linuxruan-jian.html">Linux软件</a></li>
     <li><a href="http://eleveni386.7axu.com/tag/squid.html">squid</a></li>
     <li><a href="http://eleveni386.7axu.com/tag/bo-fang-qi.html">播放器</a></li>
     <li><a href="http://eleveni386.7axu.com/tag/shell.html">shell</a></li>
     <li><a href="http://eleveni386.7axu.com/tag/http.html">http</a></li>
     <li><a href="http://eleveni386.7axu.com/tag/python.html">python</a></li>
+    <li><a href="http://eleveni386.7axu.com/tag/zhi-shi-guan-li.html">知识管理</a></li>
     <li><a href="http://eleveni386.7axu.com/tag/xuan-fu-chuang.html">悬浮窗</a></li>
     <li><a href="http://eleveni386.7axu.com/tag/zhong-wen-bian-ma.html">中文编码</a></li>
     <li><a href="http://eleveni386.7axu.com/tag/tu-cao.html">吐槽</a></li>
