--- a/archives.html
+++ b/archives.html
@@ -57,6 +57,10 @@
 <table class="table">
     <tbody>
             <tr>
+        <td>27 Feb 2014</td>
+        <td><a href='http://eleveni386.7axu.com/posts/2014/02/27/ji-ci-sshmi-yao-deng-lu-shi-bai/'>记一次ssh密钥登录失败</a></td>
+        </tr>
+            <tr>
         <td>01 Jan 2014</td>
         <td><a href='http://eleveni386.7axu.com/posts/2014/01/01/wiz-for-linux-210ban-ben-gong-neng-jie-shao/'>Wiz for linux 2.1.0版本功能介绍</a></td>
         </tr>
