--- a/tags.html
+++ b/tags.html
@@ -92,7 +92,7 @@
     <li><a href="http://eleveni386.7axu.com/tag/tu-cao.html">吐槽</a></li>
     <li><a href="http://eleveni386.7axu.com/tag/mi-ma.html">密码</a></li>
     <li><a href="http://eleveni386.7axu.com/tag/bian-ji-qi.html">编辑器</a></li>
-    <li><a href="http://eleveni386.7axu.com/tag/ban-gong-ruan-jian.html">办公软件</a></li>
+    <li><a href="http://eleveni386.7axu.com/tag/ssh.html">ssh</a></li>
     <li><a href="http://eleveni386.7axu.com/tag/zhuo-mian-gong-ju.html">桌面工具</a></li>
     <li><a href="http://eleveni386.7axu.com/tag/bi-zhi.html">壁纸</a></li>
     <li><a href="http://eleveni386.7axu.com/tag/wps.html">wps</a></li>
@@ -105,8 +105,11 @@
     <li><a href="http://eleveni386.7axu.com/tag/linuxzhuo-mian-gong-ju.html">linux桌面工具</a></li>
     <li><a href="http://eleveni386.7axu.com/tag/mitmproxy.html">mitmproxy</a></li>
     <li><a href="http://eleveni386.7axu.com/tag/tu-chuang.html">图床</a></li>
+    <li><a href="http://eleveni386.7axu.com/tag/mi-yao.html">密钥</a></li>
+    <li><a href="http://eleveni386.7axu.com/tag/linux.html">Linux</a></li>
     <li><a href="http://eleveni386.7axu.com/tag/requests.html">requests</a></li>
     <li><a href="http://eleveni386.7axu.com/tag/po-jie.html">破解</a></li>
+    <li><a href="http://eleveni386.7axu.com/tag/ban-gong-ruan-jian.html">办公软件</a></li>
 </ul>
         </div>
         
