--- a/archives.html
+++ b/archives.html
@@ -57,6 +57,10 @@
 <table class="table">
     <tbody>
             <tr>
+        <td>07 Mar 2014</td>
+        <td><a href='http://eleveni386.7axu.com/posts/2014/03/07/squidzheng-xiang-dai-li/'>squid正向代理</a></td>
+        </tr>
+            <tr>
         <td>27 Feb 2014</td>
         <td><a href='http://eleveni386.7axu.com/posts/2014/02/27/ji-ci-sshmi-yao-deng-lu-shi-bai/'>记一次ssh密钥登录失败</a></td>
         </tr>
