--- a/tags.html
+++ b/tags.html
@@ -72,12 +72,14 @@
     <li><a href="http://eleveni386.7axu.com/tag/rtx.html">rtx</a></li>
     <li><a href="http://eleveni386.7axu.com/tag/paramiko.html">paramiko</a></li>
     <li><a href="http://eleveni386.7axu.com/tag/gtalk.html">gtalk</a></li>
+    <li><a href="http://eleveni386.7axu.com/tag/httpdai-li.html">http代理</a></li>
     <li><a href="http://eleveni386.7axu.com/tag/fan-qiang.html">翻墙</a></li>
     <li><a href="http://eleveni386.7axu.com/tag/gtk.html">gtk</a></li>
     <li><a href="http://eleveni386.7axu.com/tag/keepalived.html">keepalived</a></li>
     <li><a href="http://eleveni386.7axu.com/tag/wiz.html">wiz</a></li>
     <li><a href="http://eleveni386.7axu.com/tag/an-quan.html">安全</a></li>
     <li><a href="http://eleveni386.7axu.com/tag/svn.html">Svn</a></li>
+    <li><a href="http://eleveni386.7axu.com/tag/wps.html">wps</a></li>
     <li><a href="http://eleveni386.7axu.com/tag/jian-kong-gong-ju.html">监控工具</a></li>
     <li><a href="http://eleveni386.7axu.com/tag/you-xiang.html">邮箱</a></li>
     <li><a href="http://eleveni386.7axu.com/tag/linuxruan-jian.html">Linux软件</a></li>
@@ -95,7 +97,7 @@
     <li><a href="http://eleveni386.7axu.com/tag/ssh.html">ssh</a></li>
     <li><a href="http://eleveni386.7axu.com/tag/zhuo-mian-gong-ju.html">桌面工具</a></li>
     <li><a href="http://eleveni386.7axu.com/tag/bi-zhi.html">壁纸</a></li>
-    <li><a href="http://eleveni386.7axu.com/tag/wps.html">wps</a></li>
+    <li><a href="http://eleveni386.7axu.com/tag/ni-ming-dai-li.html">匿名代理</a></li>
     <li><a href="http://eleveni386.7axu.com/tag/bing-du.html">病毒</a></li>
     <li><a href="http://eleveni386.7axu.com/tag/jiao-ben.html">脚本</a></li>
     <li><a href="http://eleveni386.7axu.com/tag/fan-yi.html">翻译</a></li>
