--- a/archives.html
+++ b/archives.html
@@ -55,6 +55,10 @@
 <table class="table">
     <tbody>
         <tr>
+        <td>21 Nov 2014</td>
+        <td><a href='http://eleveni386.7axu.com/posts/2014/11/21/pythonban-rmming-ling/'>python版rm命令</a></td>
+        </tr>
+        <tr>
         <td>29 Sep 2014</td>
         <td><a href='http://eleveni386.7axu.com/posts/2014/09/29/shen-du-jie-tu-gong-ju/'>深度截图工具</a></td>
         </tr>
