--- a/archives.html
+++ b/archives.html
@@ -17,80 +17,40 @@
 <h1>Archives for Eleven.I386's Blog</h1>
 
 <dl>
-	<dt>11  4月,2015</dt>
-	<dd><a href='posts/2015/04/11/you-dao-fan-yi-hua-ci-fan-yi/'>有道翻译 --划词翻译</a></dd>
+	<dt>21 12月,2015</dt>
+	<dd><a href='posts/2015/12/21/flvcdyan-gao-rao-guo/'>flvcd广告绕过</a></dd>
 	<dt>21 11月,2014</dt>
 	<dd><a href='posts/2014/11/21/pythonban-rmming-ling/'>python版rm命令</a></dd>
-	<dt>29  9月,2014</dt>
-	<dd><a href='posts/2014/09/29/shen-du-jie-tu-gong-ju/'>深度截图工具</a></dd>
 	<dt>10  4月,2014</dt>
 	<dd><a href='posts/2014/04/10/empathykuai-su-guan-bi-liao-tian-chuang-kou/'>Empathy快速关闭聊天窗口</a></dd>
 	<dt>07  3月,2014</dt>
 	<dd><a href='posts/2014/03/07/squidzheng-xiang-dai-li/'>squid正向代理</a></dd>
 	<dt>27  2月,2014</dt>
-	<dd><a href='posts/2014/02/27/ji-ci-sshmi-yao-deng-lu-shi-bai/'>记一次ssh密钥登录失败</a></dd>
-	<dt>01  1月,2014</dt>
-	<dd><a href='posts/2014/01/01/wiz-for-linux-210ban-ben-gong-neng-jie-shao/'>Wiz for linux 2.1.0版本功能介绍</a></dd>
-	<dt>10 12月,2013</dt>
-	<dd><a href='posts/2013/12/10/markdownbian-ji-qi/'>markdown编辑器</a></dd>
+	<dd><a href='posts/2014/02/27/ji-yi-ci-sshmi-yao-deng-lu-shi-bai/'>记一次ssh密钥登录失败</a></dd>
 	<dt>13 10月,2013</dt>
 	<dd><a href='posts/2013/10/13/squid-url-tiao-zhuan/'>Squid Url 跳转</a></dd>
-	<dt>22  9月,2013</dt>
-	<dd><a href='posts/2013/09/22/ji-yi-wang-rtxmi-ma/'>记.遗忘RTX密码</a></dd>
 	<dt>01  9月,2013</dt>
 	<dd><a href='posts/2013/09/01/cai-yong-pelicanjing-tai-blog/'>采用pelican静态blog</a></dd>
 	<dt>30  8月,2013</dt>
 	<dd><a href='posts/2013/08/30/clijian-yi-mi-ma-guan-li-gong-ju/'>CLI简易密码管理工具</a></dd>
 	<dt>23  8月,2013</dt>
 	<dd><a href='posts/2013/08/23/tmuxduo-paneltong-bu/'>tmux多panel同步</a></dd>
-	<dt>13  8月,2013</dt>
-	<dd><a href='posts/2013/08/13/vimzhong-wen-luan-ma/'>vim中文乱码</a></dd>
-	<dt>11  8月,2013</dt>
-	<dd><a href='posts/2013/08/11/clementine-yin-le-bo-fang-qi/'>Clementine 音乐播放器</a></dd>
-	<dt>11  8月,2013</dt>
-	<dd><a href='posts/2013/08/11/tu-pian-hou-men-fen-xi/'>图片后门分析</a></dd>
-	<dt>05  7月,2013</dt>
-	<dd><a href='posts/2013/07/05/2345zi-dong-qian-dao-qi-bian-xie-jing-guo/'>2345自动签到器编写经过</a></dd>
 	<dt>03  6月,2013</dt>
 	<dd><a href='posts/2013/06/03/pythondai-cookiesfang-wen/'>python带cookies访问</a></dd>
 	<dt>17  5月,2013</dt>
 	<dd><a href='posts/2013/05/17/jia-mi-ni-de-httpqing-qiu-chuan-qiang/'>加密你的HTTP请求(穿墙)</a></dd>
-	<dt>17  5月,2013</dt>
-	<dd><a href='posts/2013/05/17/kangle-zuo-httpni-ming-dai-li/'>Kangle 做HTTP匿名代理</a></dd>
-	<dt>26  4月,2013</dt>
-	<dd><a href='posts/2013/04/26/linuxzhuo-mian-liu-liang-jian-kong-gong-ju/'>Linux桌面流量监控工具</a></dd>
 	<dt>25  4月,2013</dt>
 	<dd><a href='posts/2013/04/25/wang-qia-zhong-duan-bang-ding/'>网卡中断绑定</a></dd>
 	<dt>29  3月,2013</dt>
-	<dd><a href='posts/2013/03/29/ji-ci-ddosgong-ji-dao-zhi-fu-wu-qi-si-ji/'>记. 一次ddos攻击,导致服务器死机</a></dd>
+	<dd><a href='posts/2013/03/29/ji-yi-ci-ddosgong-ji-dao-zhi-fu-wu-qi-si-ji/'>记. 一次ddos攻击,导致服务器死机</a></dd>
 	<dt>11  3月,2013</dt>
-	<dd><a href='posts/2013/03/11/ji-ci-an-zhuang-fcitxguo-cheng/'>记一次安装fcitx过程</a></dd>
-	<dt>28  2月,2013</dt>
-	<dd><a href='posts/2013/02/28/wps-for-linux-bate1-shi-yong/'>wps for linux Bate1 试用</a></dd>
-	<dt>14 12月,2012</dt>
-	<dd><a href='posts/2012/12/14/jie-tu-zi-dong-fen-xiang-jiao-ben/'>截图自动分享脚本</a></dd>
+	<dd><a href='posts/2013/03/11/ji-yi-ci-an-zhuang-fcitxguo-cheng/'>记一次安装fcitx过程</a></dd>
 	<dt>29 11月,2012</dt>
 	<dd><a href='posts/2012/11/29/xiu-fu-zenoss321-graphs-range-bug/'>修复zenoss3.2.1 graphs range bug</a></dd>
-	<dt>28 11月,2012</dt>
-	<dd><a href='posts/2012/11/28/wang-ji-mi-ma-zhi-svn/'>忘记密码之 Svn</a></dd>
-	<dt>22 11月,2012</dt>
-	<dd><a href='posts/2012/11/22/zhuo-mian-xiu-tint2cheng-guo/'>桌面秀 tint2成果</a></dd>
-	<dt>18 10月,2012</dt>
-	<dd><a href='posts/2012/10/18/nginx-shuang-ji-re-bei-shi-zhan/'>nginx 双机热备-实战</a></dd>
-	<dt>16 10月,2012</dt>
-	<dd><a href='posts/2012/10/16/keepalivedyuan-li-yu-shi-zhan-jing-jiang/'>Keepalived原理与实战精讲</a></dd>
-	<dt>20  9月,2012</dt>
-	<dd><a href='posts/2012/09/20/nethogs-jian-kong-mei-ge-jin-cheng-ju-ti-shi-yong-de-liu-liang/'>nethogs, 监控每一个进程具体使用的流量</a></dd>
-	<dt>17  9月,2012</dt>
-	<dd><a href='posts/2012/09/17/ji-ci-you-xiang-mi-ma-diu-shi/'>记. 一次邮箱密码丢失</a></dd>
-	<dt>10  9月,2012</dt>
-	<dd><a href='posts/2012/09/10/python-jin-du-tiao/'>python 进度条</a></dd>
 	<dt>09  9月,2012</dt>
 	<dd><a href='posts/2012/09/09/sshpass-fei-jiao-hu-sshmi-ma-yan-zheng/'>sshpass 非交互ssh密码验证</a></dd>
 	<dt>08  9月,2012</dt>
 	<dd><a href='posts/2012/09/08/duo-xian-cheng-sshfen-fa-jiao-ben/'>多线程ssh分发脚本</a></dd>
-	<dt>24  8月,2012</dt>
-	<dd><a href='posts/2012/08/24/zenossde-ssh-command/'>zenoss的SSH command</a></dd>
 </dl>
 
 		</div>
@@ -101,10 +61,8 @@
 	<li><a href="http://eleveni386.7axu.com/category/jian-kong-xi-tong.html">监控系统</a></li>
 	<li><a href="http://eleveni386.7axu.com/category/linuxyun-wei.html">Linux运维</a></li>
 	<li><a href="http://eleveni386.7axu.com/category/linuxzhuo-mian.html">Linux桌面</a></li>
-	<li><a href="http://eleveni386.7axu.com/category/mu-ma-bing-du.html">木马病毒</a></li>
 	<li><a href="http://eleveni386.7axu.com/category/python.html">python</a></li>
 	<li><a href="http://eleveni386.7axu.com/category/ruan-jian-tui-jian.html">软件推荐</a></li>
-	<li><a href="http://eleveni386.7axu.com/category/vim.html">vim</a></li>
 </div>
 
 <div class="sidebarpages">
